Fri Oct 20 14:55:59 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added DATADIR define to find the arch-independent data, with
	  m4 macro AC_DEFINE_DIR.
	
	* Added omindexer.dtd to the distribution.

	* Indexer now finds the DTD by itself to use for verification,
	  either in DATADIR or by the OM_DTD_PATH environment variable.

	* Indexer tests no longer specify the DTD in the XML descriptions.

	* malloc_wrapper.sh sets OM_DTD_PATH.  Should probably be renamed
	  to run_test.sh or something.

Fri Oct 20 13:58:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed checks for document IDs being 0 or termnames being "" in
	  API.  Changed checks in Quartz for these conditions into Asserts.

Fri Oct 20 13:01:26 BST 2000 Olly Betts

	* Added `make ctags' rule.

Fri Oct 20 12:55:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed refcount problem with Quartz - references were being held
	  to the QuartzDatabase member of a QuartzWritableDatabase.
	  Restructured to tidy up and avoid this:  QuartzTermLists now hold
	  a refcount pointer to the appropriate database, and store a
	  pointer to the lexicon table to use directly if required.

Thu Oct 19 16:47:18 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a few indexer tests.

	* Made the START node's output be a wildcard type.

Thu Oct 19 16:03:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* quartz_lexicons allocate new term IDs (untested).

Thu Oct 19 13:00:52 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented quartz_lexicon, except for allocation of new term IDs.
	  Close to working correctly, except for unexplained refcount problem
	  in testsuite.

Thu Oct 19 09:59:15 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added quartz_lexicon.{cc,h}.  Appropriate interface - not yet
	  implemented though.

Thu Oct 19 09:08:50 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
