@@ -1,3 +1,7 @@
+Fri Oct 20 15:14:47 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added autoconf/definedir.m4
+
 Fri Oct 20 14:55:59 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Added DATADIR define to find the arch-independent data, with
